; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-throttle.c_RefreshThrottleFPS.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-throttle.c_RefreshThrottleFPS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@desiredfps = common dso_local global i32 0, align 4
@fps_scale = common dso_local global i32 0, align 4
@tfreq = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RefreshThrottleFPS() #0 {
  %1 = call i32 (...) @FCEUI_GetDesiredFPS()
  %2 = ashr i32 %1, 8
  store i32 %2, i32* @desiredfps, align 4
  %3 = load i32, i32* @desiredfps, align 4
  %4 = load i32, i32* @fps_scale, align 4
  %5 = mul nsw i32 %3, %4
  %6 = ashr i32 %5, 8
  store i32 %6, i32* @desiredfps, align 4
  store i32 10000000, i32* @tfreq, align 4
  %7 = load i32, i32* @tfreq, align 4
  %8 = shl i32 %7, 16
  store i32 %8, i32* @tfreq, align 4
  ret void
}

declare dso_local i32 @FCEUI_GetDesiredFPS(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
